Working React 18 in .net 6

--- a/src/SSR.Net.DotNetFramework/Views/Home/React17.cshtml
+++ b/src/SSR.Net.DotNetFramework/Views/Home/React17.cshtml
@@ -26,6 +26,6 @@
 </head>
 <body>
     @Html.Raw(component.Html)
-    @Html.Raw(component.InitScript)
+    <script>@Html.Raw(component.InitScript)</script>
 </body>
 </html>
