--- a/src/SSR.Net.DotNetFramework/Views/Home/Vue3.cshtml
+++ b/src/SSR.Net.DotNetFramework/Views/Home/Vue3.cshtml
@@ -16,6 +16,6 @@
 </head>
 <body>
     @Html.Raw(component.Html)
-    @Html.Raw(component.InitScript)
+    <script>@Html.Raw(component.InitScript)</script>
 </body>
 </html>
